# zera-sdk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
crates/zera-core/: Cargo.toml
crates/zera-core/src/: constants.rs  error.rs  lib.rs  merkle.rs  note.rs  pda.rs  poseidon.rs  verifier.rs
crates/zera-neon/: Cargo.toml
crates/zera-neon/src/: lib.rs
demos/react-demo/: README.md
demos/react-demo/src/: App.tsx
demos/solana-basic/: README.md
demos/solana-basic/src/: deposit.ts  pool-status.ts
devnet/: .gitignore  SETUP.md  surfpool.toml  txtx.yml
devnet/accounts_dump/: zera_pool.json
devnet/runbooks/: setup_light.tx  zera_subgraph.tx
docs/: AGENTIC_INTEGRATION.md  API_REFERENCE.md  ARCHITECTURE.md  CRYPTOGRAPHY.md  EXAMPLES.md  INTEGRATION_GUIDE.md  QUICKSTART.md  SDK_STATUS_ANALYSIS.md  SECURITY.md  USE_CASES.md
